# FastAPI-Authentication

./: .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  ruff.toml
config/: config.template.toml
docker_compose/: app.yaml  backup.yaml  storages.yaml
src/: __main__.py  config.py
src/application/common/: base_command.py
src/application/common/exceptions/: __init__.py  base.py  redis.py
src/application/interfaces/: __init__.py  user.py
src/application/user/commands/: __init__.py  authentication.py  logout.py  registration.py
src/application/user/dto/: user.py
src/application/user/events/: __init__.py  user.py  user_created.py
src/application/user/exceptions/: __init__.py  authentication.py  logout.py  registration.py
src/application/user/interfaces/: __init__.py  user.py
src/domain/common/entities/: __init__.py  aggregate_root.py
src/domain/common/events/: base.py
src/domain/common/exceptions/: base.py
src/domain/common/value_objects/: base.py
src/domain/user/: __init__.py
src/domain/user/entities/: authenticated_user.py  logout_user.py  user.py
src/domain/user/events/: __init__.py  authorize_user.py  create_user.py  logout_user.py
src/domain/user/exceptions/: user_exceptions.py
src/domain/user/utils/: main.py
src/domain/user/value_objects/: __init__.py  auth_token.py  full_name.py  password.py  username.py
src/infrastructure/: config_loader.py  uow.py
src/infrastructure/db/: __init__.py  config.py  converters.py  exceptions_mapper.py  main.py  redis.py  uow.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 20240826-204844_c2366c392782_inital_migration.py  20240828-154951_3a4415bed66f_inital_migration.py
src/infrastructure/db/models/: __init__.py  base.py  user.py
src/infrastructure/db/repositories/: base.py  users.py
src/infrastructure/di/: __init__.py  main.py
src/infrastructure/mediator/: main.py
src/presentation/api/: __main__.py  config.py  main.py
src/presentation/api/controllers/: __init__.py  default.py  main.py  user.py
src/presentation/api/controllers/responses/: base.py
src/presentation/api/middlewares/: main.py  structlog.py
src/presentation/api/providers/: __init__.py  di.py  main.py  mediator.py  stub.py
src/settings/: cache.py  config.py
src/tests/application/commands/: conftest.py  test_create_user_handler.py  test_login_api.py  test_login_handler.py  test_logout_handler.py
src/tests/domain/value_object/: test_user_data.py
src/tests/integration/repos/: user_create_user_repo.py  user_login_repo.py  user_logout_repo.py
src/tests/mock/: __init__.py  event_mediator.py
