[tool.poetry]
name = "fastapi-authentication"
version = "0.1.0"
description = "custom fastAPI authentication"
authors = ["podrivnick <ribakov1973@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"
orjson = "^3.10.7"
adaptix = "^3.0.0b7"
python-dotenv = "^1.0.1"
uuid6 = "^2024.7.10"
fastapi-limiter = "^0.1.6"
asyncio-redis = "^0.16.0"
didiator = {version = "^0.3.1", extras = ["di"]}
bcrypt = "^4.2.0"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pyupgrade = "^3.17.0"
add-trailing-comma = "^3.1.0"
autoflake = "^2.3.1"
docformatter = "^1.7.5"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.5.0"
dlint = "^0.15.0"
faker = "^28.1.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
factory-boy = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 120
ignore = [
    "E203",
    "E266",
    "E501",
    "W503",
    "E800",
]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
]


[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_django=["django","rest_framework"]
known_first_party=["core"]
sections=[
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.ruff]
line-length = 88
exclude = ["migrations", ".git"]
lint.extend-ignore = ["E501", "F401",]
lint.select = ["E", "F", "W"]


[lint.mccabe]
max-complexity = 12

[lint.pydocstyle]
convention = "pep257"

[lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/migrations/*" = ["F401"]
